rough stage push

--- a/public/assets/css/vitality-yellow.css
+++ b/public/assets/css/vitality-yellow.css
@@ -17,7 +17,7 @@ section {
   padding: 100px 0;
 }
 .bg-gray {
-  background-color: #f5f5f5;
+  background-color: #000;
 }
 .bg-dark {
   color: white;
